samples/3.ts
type LikeLevel = 1 | 2 | 3 | 4 | 5

function save(like: LikeLevel) {
}

save(1)
save(2)
save(3)
save(4)
save(5)
save(6) // error
